simple result handler, testing textview

--- a/DrSiwoz/app/src/main/res/layout/fragment_tile_menu.xml
+++ b/DrSiwoz/app/src/main/res/layout/fragment_tile_menu.xml
@@ -61,6 +61,14 @@
                     android:layout_height="wrap_content"
                     android:text="SCAN"
                     android:id="@+id/scanButton" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Large Text"
+                    android:id="@+id/testQR"
+                    android:layout_column="1" />
             </TableRow>
         </TableLayout>
 
