Add support for querying Patient.

--- a/DrSiwoz/app/src/main/res/layout/fragment_tile_menu.xml
+++ b/DrSiwoz/app/src/main/res/layout/fragment_tile_menu.xml
@@ -59,8 +59,8 @@
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="New Button"
-                    android:id="@+id/button4" />
+                    android:text="Scan Code"
+                    android:id="@+id/scanButton" />
             </TableRow>
         </TableLayout>
 
