--- a/DrSiwoz/app/src/main/res/layout/patients_fragment.xml
+++ b/DrSiwoz/app/src/main/res/layout/patients_fragment.xml
@@ -7,7 +7,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name"
-        android:id="@+id/textView2"
+        android:id="@+id/nameTextView"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
@@ -15,8 +15,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Surname"
-        android:id="@+id/textView3"
-        android:layout_below="@+id/textView2"
+        android:id="@+id/surnameTextView"
+        android:layout_below="@+id/nameTextView"
         android:layout_alignParentStart="true" />
 
     <Button
