--- a/DrSiwoz/app/src/main/res/layout/patients_fragment.xml
+++ b/DrSiwoz/app/src/main/res/layout/patients_fragment.xml
@@ -22,10 +22,20 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="GET"
         android:id="@+id/btSend"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="POST"
+        android:id="@+id/btPost"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:visibility="invisible"/>
+
 
     <RadioGroup
         android:layout_width="match_parent"
@@ -33,7 +43,7 @@
         android:layout_below="@+id/btSend"
         android:orientation="horizontal"
         android:layout_alignParentStart="true"
-        android:id="@+id/radioGroup">
+        android:id="@+id/radioPatientGroup">
 
         <RadioButton
             android:layout_width="wrap_content"
@@ -54,11 +64,27 @@
 
     </RadioGroup>
 
-    <ListView
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/lvReport"
-        android:layout_below="@+id/radioGroup"
-        android:layout_alignParentStart="true" />
+        android:text="New Text"
+        android:id="@+id/tvDescr"
+        android:layout_below="@+id/radioPatientGroup"
+        android:layout_alignParentStart="true"
+        android:layout_alignBottom="@+id/radioPatientGroup"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"/>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtPatDescr"
+        android:hint="Wpisz opis stanu pacjenta"
+        android:layout_below="@+id/radioPatientGroup"
+        android:layout_alignParentStart="true"
+        android:layout_alignBottom="@+id/radioPatientGroup"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:visibility="invisible"/>
 
 </RelativeLayout>
