--- a/DrSiwoz/app/src/main/res/layout/patients_fragment.xml
+++ b/DrSiwoz/app/src/main/res/layout/patients_fragment.xml
@@ -9,7 +9,8 @@
         android:text="Name"
         android:id="@+id/nameTextView"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textSize="20dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -17,7 +18,8 @@
         android:text="Surname"
         android:id="@+id/surnameTextView"
         android:layout_below="@+id/nameTextView"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textSize="20dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -67,7 +69,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
         android:id="@+id/tvDescr"
         android:layout_below="@+id/radioPatientGroup"
         android:layout_alignParentStart="true"
@@ -80,11 +81,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/txtPatDescr"
         android:hint="Wpisz opis stanu pacjenta"
+        android:visibility="invisible"
         android:layout_below="@+id/radioPatientGroup"
         android:layout_alignParentStart="true"
-        android:layout_alignBottom="@+id/radioPatientGroup"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:visibility="invisible"/>
+        android:textColorHint="@color/accent_material_dark" />
 
 </RelativeLayout>
