--- a/DrSiwoz/app/src/main/res/layout/patients_fragment.xml
+++ b/DrSiwoz/app/src/main/res/layout/patients_fragment.xml
@@ -19,7 +19,8 @@
         android:id="@+id/surnameTextView"
         android:layout_below="@+id/nameTextView"
         android:layout_alignParentStart="true"
-        android:textSize="20dp" />
+        android:textSize="20dp"
+        android:layout_above="@+id/radioPatientGroup" />
 
     <Button
         android:layout_width="wrap_content"
@@ -38,31 +39,51 @@
         android:layout_alignParentEnd="true"
         android:visibility="invisible"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_alignParentStart="true"
+        android:textSize="20dp"
+        android:id="@+id/spacing"
+        android:layout_below="@+id/btSend" />
+
 
     <RadioGroup
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_below="@+id/btSend"
+        android:layout_height="55dp"
         android:orientation="horizontal"
-        android:layout_alignParentStart="true"
-        android:id="@+id/radioPatientGroup">
+
+        android:id="@+id/radioPatientGroup"
+        android:layout_below="@+id/spacing"
+        android:layout_alignParentStart="true">
 
         <RadioButton
+            android:button ="@drawable/justinfo_icon"
+            android:scaleType="fitXY"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Good"/>
+            android:text="Info"
+            android:clickable="true"
+            android:id="@+id/info_rb" />
+
         <RadioButton
+            android:button="@drawable/ok_icon"
+            android:scaleType="fitXY"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Tolerable"/>
+            android:text="Good"
+            android:id="@+id/good_rb"/>
         <RadioButton
+            android:button="@drawable/care_icon"
+            android:scaleType="fitXY"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_weight="1"
-            android:text="Bad"/>
+            android:id="@+id/care_rb"
+            android:text="Care"/>
 
     </RadioGroup>
 
@@ -70,7 +91,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvDescr"
-        android:layout_below="@+id/radioPatientGroup"
+        android:layout_below="@id/radioPatientGroup"
         android:layout_alignParentStart="true"
         android:layout_alignBottom="@+id/radioPatientGroup"
         android:layout_alignParentEnd="true"
@@ -83,7 +104,9 @@
         android:hint="Wpisz opis stanu pacjenta"
         android:visibility="invisible"
         android:layout_below="@+id/radioPatientGroup"
-        android:layout_alignParentStart="true"
-        android:textColorHint="@color/accent_material_dark" />
+        android:layout_alignParentStart="false"
+        android:textColorHint="@color/accent_material_dark"
+        android:gravity="top"
+        android:layout_weight="1" />
 
 </RelativeLayout>
