--- a/DrSiwoz/app/src/main/res/layout/patients_fragment.xml
+++ b/DrSiwoz/app/src/main/res/layout/patients_fragment.xml
@@ -14,8 +14,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Surname"
-        android:id="@+id/surnameTextView"
+        android:text="Pesel"
+        android:id="@+id/peselTextView"
         android:layout_below="@+id/nameTextView"
         android:layout_alignParentStart="true" />
 
@@ -60,5 +60,22 @@
         android:id="@+id/lvReport"
         android:layout_below="@+id/radioGroup"
         android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Acceptance Date"
+        android:id="@+id/acceptanceDateTextView"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/peselTextView"
+        android:layout_marginStart="52dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Release Date"
+        android:id="@+id/releaseDateTextView"
+        android:layout_below="@+id/acceptanceDateTextView"
+        android:layout_alignStart="@+id/acceptanceDateTextView" />
 
 </RelativeLayout>
