--- a/DrSiwoz/app/src/main/res/layout/patients_fragment.xml
+++ b/DrSiwoz/app/src/main/res/layout/patients_fragment.xml
@@ -54,13 +54,6 @@
 
     </RadioGroup>
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/lvReport"
-        android:layout_below="@+id/radioGroup"
-        android:layout_alignParentStart="true" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -77,5 +70,72 @@
         android:id="@+id/releaseDateTextView"
         android:layout_below="@+id/acceptanceDateTextView"
         android:layout_alignStart="@+id/acceptanceDateTextView" />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/linearLayout">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right">
+
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:text="Date"
+                android:id="@+id/textView3"
+                android:paddingBottom="5dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/examinationDateTextView"
+                android:paddingBottom="10dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:text="Doctor"
+                android:id="@+id/textView5"
+                android:paddingBottom="5dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/examinationDoctorTextView" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:text="No examinations yet."
+            android:id="@+id/examinationDescriptionTextView" />
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Last examination"
+        android:id="@+id/lastExaminationTitleTextView"
+        android:layout_gravity="center_horizontal"
+        android:paddingBottom="10dp"
+        android:layout_above="@+id/linearLayout"
+        android:layout_toStartOf="@+id/btSend" />
 
 </RelativeLayout>
