widoczek, tutaj pojawia się zagnieżdzony listView, tak aby każde badanie na liście, miało swoją listę, potrzebny jest jeszcze tylko adapter

--- a/DrSiwoz/app/src/main/res/layout/medTest_list_item.xml
+++ b/DrSiwoz/app/src/main/res/layout/medTest_list_item.xml
@@ -1,29 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/examinationStatusTextView" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/examinationDateTextView" />
+        android:text="testName"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/testNameTextview"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/doctorNameTextView" />
+        android:text="Status"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/statusTextView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/examinationDescriptionTextView" />
-</LinearLayout>
+        android:text="created"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/createdTestView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/resultsTestTextView"
+        android:layout_below="@+id/testNameTextview"
+        android:layout_alignParentStart="true" />
+</RelativeLayout>
