--- a/DrSiwoz/app/src/main/res/layout-large/fragment_tile_menu.xml
+++ b/DrSiwoz/app/src/main/res/layout-large/fragment_tile_menu.xml
@@ -60,7 +60,7 @@
                     android:background="#00000000"
                     android:src="@drawable/exams"
                     android:text="Exams"
-                    android:id="@+id/examsButton" />
+                    android:id="@+id/medTestsButton" />
             </TableRow>
 
             <TableRow
