--- a/DrSiwoz/app/src/main/res/layout/fragment_tile_menu.xml
+++ b/DrSiwoz/app/src/main/res/layout/fragment_tile_menu.xml
@@ -59,8 +59,8 @@
                     android:scaleType="fitCenter"
                     android:background="#00000000"
                     android:src="@drawable/exams"
-                    android:text="Exams"
-                    android:id="@+id/examsButton" />
+                    android:text="MedTests"
+                    android:id="@+id/medTestsButton" />
             </TableRow>
 
             <TableRow
