--- a/DrSiwoz/app/src/main/res/layout/patients_fragment.xml
+++ b/DrSiwoz/app/src/main/res/layout/patients_fragment.xml
@@ -105,10 +105,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Good"
+                android:text="good"
                 android:id="@+id/good_rb"
                 android:layout_alignTop="@+id/patientStatusDescriptionTextView"
-                android:layout_alignStart="@+id/lastExaminationTitleTextView" />
+                android:layout_alignStart="@+id/lastExaminationTitleTextView"
+                android:checked="false" />
 
             <RadioButton
                 android:button ="@drawable/justinfo_icon"
@@ -130,14 +131,15 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:id="@+id/care_rb"
-                android:text="Care"
+                android:text="care"
                 android:layout_alignBottom="@+id/good_rb"
-                android:layout_alignStart="@+id/btSend" />
+                android:layout_alignStart="@+id/btSend"
+                android:checked="false" />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="GET"
+                android:text="Send"
                 android:id="@+id/btSend"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true" />
@@ -170,7 +172,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Last medicalTest"
+            android:text="Last examination"
             android:id="@+id/lastExaminationTitleTextView"
             android:layout_gravity="center_horizontal"
             android:paddingBottom="10dp"
