--- a/DrSiwoz/app/src/main/res/layout/patients_fragment.xml
+++ b/DrSiwoz/app/src/main/res/layout/patients_fragment.xml
@@ -21,7 +21,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Name"
-                    android:id="@+id/textView2" />
+                    android:id="@+id/textView2"
+                    android:paddingRight="5dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -40,7 +41,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Pesel"
-                    android:id="@+id/textView4" />
+                    android:id="@+id/textView4"
+                    android:paddingRight="5dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -59,7 +61,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Acceptance date"
-                    android:id="@+id/textView6" />
+                    android:id="@+id/textView6"
+                    android:paddingRight="5dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -78,7 +81,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Release date"
-                    android:id="@+id/textView7" />
+                    android:id="@+id/textView7"
+                    android:paddingRight="5dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
