--- a/DrSiwoz/app/src/main/res/layout/medtests_fragment.xml
+++ b/DrSiwoz/app/src/main/res/layout/medtests_fragment.xml
@@ -9,13 +9,6 @@
         android:layout_height="wrap_content"
         android:layout_toStartOf="@+id/requestTestButton" />
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/testsListView"
-        android:layout_below="@+id/testsSpinner"
-        android:layout_alignParentStart="true" />
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -23,6 +16,15 @@
         android:id="@+id/requestTestButton"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true" />
+
+    <ExpandableListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/medicalTestExpandableListView"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/requestTestButton"
+        android:choiceMode="singleChoice" />
 
 
 </RelativeLayout>
